css/pages/single.css
.single-post__content {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-areas: "content sidebar";
  gap: clamp(2rem, 5vw, 4rem);
  background-color: var(--color-background);
  margin: 0 auto;
  margin-top: -10rem;
  padding: clamp(0.5rem, 5vw, 2rem);
  width: min(90%, var(--site-max-width));
  z-index: 1;
}

.single-post__content-wrapper {
  grid-area: content;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  max-width: 100%;
}

.post-meta {
  width: 100%;
  padding: 1.5rem 0;
  border-top: 2px dotted var(--color-contrast);
  border-bottom: 2px dotted var(--color-contrast);
}

.post-meta__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.75rem 1.5rem;
  list-style: none;
  padding: 0;
  margin: 0;
}

.post-meta__list li {
  display: flex;
  align-items: center;
  gap: 0.4rem;
}

.post-meta__list li time,
.post-meta__list li a,
.post-meta__list li span:not(.sr-only) {
  font-size: 0.875rem;
  color: var(--color-text);
}

.post-meta__list li a {
  color: var(--color-primary);
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
}

.post-meta__list li svg {
  width: 1.25rem;
  height: 1.25rem;
  flex-shrink: 0;
}

.post-meta__item ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 0.25rem 0.5rem;
}

/* Media queries */

@media screen and (max-width: 1024px) {
  .single-post__content {
    grid-template-columns: minmax(0, 2.5fr) minmax(120px, 1fr);
  }

  .post-meta {
    padding: 1.25rem 0;
  }

  .related-posts {
    padding: 0 clamp(0.5rem, 5vw, 2rem);
  }
}

@media screen and (max-width: 768px) {
  .single-post {
    gap: 0;
    padding-bottom: 5rem;
  }

  .single-post__content-wrapper {
    overflow-x: hidden;
  }

  .post-meta {
    padding: 1rem 0;
  }

  .single-post__content {
    grid-template-columns: 1fr;
    grid-template-areas:
      "content"
      "sidebar";

    padding-left: 1rem;
    padding-right: 1rem;
    width: 100%;
    margin-top: -7rem;
    border-bottom: 2px solid var(--color-accent);
  }
}

